# DirtyWatts

./: .gitignore  LICENSE.md  README.md  captain-definition-demo  captain-definition-public-api  captain-definition-scraper  dev.docker-compose.yml  power_sites.csv  query.flux
.fleet/: run.json
DemoServer/: Dockerfile  package.json  vite.config.ts
DemoServer/src/: app.d.ts
DemoServer/src/lib/: CalendarButton.svelte  ColourPreviewBar.svelte  PowerStations.svelte  api.ts  calculateLightColour.ts  calculatePowerstationData.ts  powerstation.ts  stores.ts  utils.ts
DemoServer/src/routes/: +page.svelte
DemoServer/src/routes/api/: +server.ts
GenerationLevelAnalysis/: main.ipynb  power_sources.csv  requirements.txt
MicroIndicator/: example.json  platformio.ini
MicroIndicator/src/: config.h  main.cpp  neolights.cpp  neolights.h  powerstations.cpp  powerstations.h  relay.cpp  relay.h  twatch.cpp  twatch.h  vfd.cpp  vfd.h
MicroIndicator/src/fonts/: jetbrains_mono_64.c
MicroIndicatorSlave/: platformio.ini
MicroIndicatorSlave/src/: main.cpp  main.h
backend-api/: Cargo.toml
backend-api/migrations/2022-08-19-112146_datasource/: down.sql  up.sql
backend-api/migrations/2022-08-19-225424_add_fields/: down.sql
backend-api/src/: main.rs  schema.rs  scraper.rs
backend-api/src/db/: mod.rs  schema.rs
backend-cf/: .gitignore  Cargo.toml  build.rs  package.json  pnpm-lock.yaml  wrangler.toml
backend-cf/src/: db.rs  emi_sites.rs  lib.rs  status.rs  utils.rs
crates/dirtywatts-backend/: Cargo.toml
crates/dirtywatts-backend/src/: db.rs  error.rs  main.rs  status.rs
crates/dirtywatts-backend/src/routes/: history.rs  live.rs  mod.rs  status.rs  util.rs
crates/dirtywatts-common/: Cargo.toml  build.rs
crates/dirtywatts-common/src/: lib.rs
crates/dirtywatts-migrator/: Cargo.toml
crates/dirtywatts-migrator/src/: main.rs
crates/dirtywatts-scraper/: Cargo.toml  Dockerfile
crates/dirtywatts-scraper/api_defs/: raw_NetworkSupplyPointsCords.csv
crates/dirtywatts-scraper/src/: db.rs  emi_stats.rs  main.rs  power_station.rs
dirtywatts-scraper/: .dockerignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  processSupplyPoints.ipynb
dirtywatts-scraper/api_defs/: clean_NetworkSupplyPointsCords.csv  raw_NetworkSupplyPointsCords.csv  transpowerResponse.json  transpowerResponseNew.json
dirtywatts-scraper/migrations/2022-08-19-112146_datasource/: up.sql
dirtywatts-scraper/migrations/2023-08-06-231443_emission_sources/: down.sql  up.sql
dirtywatts-scraper/src/: db.rs  emi_stats.rs  main.rs  power_station.rs
dirtywatts-scraper/src/db/: emi_stats.rs  mod.rs  models.rs  power_stations.rs  schema.rs
frontend-dashboard/: README.md  package.json  svelte.config.js  tsconfig.json  vite.config.js
frontend-dashboard/src/: app.d.ts  app.html
frontend-dashboard/src/assets/scss/: app.scss
frontend-dashboard/src/lib/: CoalPower.svelte  ConnectionMap.svelte  ConnectionPointHistory.svelte  DynamicLogo.svelte  Footer.svelte  Header.svelte  LazyLoader.svelte  Loader.svelte  MapIcon.svelte  NZCapacityGuage.svelte  PageTransitions.svelte  PowerStations.svelte  api.ts  consts.ts  indicatorLightColor.ts  stores.ts
frontend-dashboard/src/lib/header/: Header.svelte
frontend-dashboard/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend-dashboard/src/routes/api/: +page.svelte
frontend-dashboard/src/routes/home/: +page.svelte
frontend-dashboard/src/routes/map/: +page.svelte
node-app/: index.js  package-lock.json  package.json
public-api/: Dockerfile  main.py  requirements.txt  start.sh  test.ipynb
public-api/app/: db.py  historyRoutes.py  liveRoutes.py  main.py  refreshCache.py  responseModels.py  statusRoutes.py  utils.py
web-scraper-testing/: .dockerignore  .env  Cargo.toml  Dockerfile  processSupplyPoints.ipynb
web-scraper-testing/api_defs/: emiAPIDef.json  emiResponseReal.json  emiResponseSmall.json  powerTypes.csv
web-scraper-testing/migrations/2022-08-19-112146_datasource/: up.sql
web-scraper-testing/migrations/2022-08-19-215612_remove_country/: down.sql  up.sql
web-scraper-testing/migrations/2022-08-19-225424_add_fields/: up.sql
web-scraper-testing/migrations/2022-08-19-231044_allow_nulls/: down.sql  up.sql
web-scraper-testing/src/: emi_stats.rs  main.rs  power_station.rs  response.json
web-scraper-testing/src/db/: emi_stats.rs  mod.rs  models.rs  power_stations.rs  schema.rs
