[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = { version = "1.20.1", features = ["time", "macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "1.4.8", features = ["chrono", "postgres"] }
reqwest = { version = "0.11.11", features = ["serde_json"] }
anyhow = "1.0.62"
chrono = "0.4.22"
dotenv = "0.15.0"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }