[package]
name = "todo-worker"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.12"
serde_json = "1.0.67"
serde = { version = "*", features = ["derive"] }
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = "0.4.5"
num-traits = "0.2.15"
chrono = "0.4.23"
reqwest = { version = "0.11.13", features = ["json"] }
csv = "*"
opg = "0.2.0"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
csv = "*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
