[package]
name = "dirtywatts-scraper"
version = "0.1.0"
edition = "2021"
default-run = "dirtywatts-scraper"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "migrator"
path = "src/bin/migrator.rs"
required-features = ["migrator"]

[dependencies]
chrono = "0.4.22"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "*"
dotenv = "0.15.0"
influxdb2 = "0.3.5"
envy = "0.4.2"
futures = "0.3.25"
influxdb2-structmap = "0.2.0"
num-traits = "0.2.15"
sqlx = { version = "*", optional = true, features = [
    "postgres",
    "runtime-tokio-rustls",
    "chrono",
    "bigdecimal",
] }
bigdecimal = { version = "*", optional = true }
reqwest = { version = "0.11.13", features = ["json"] }

[features]
# default = ["migrator"]
migrator = ["bigdecimal", "sqlx"]

[build-dependencies]
csv = "*"
serde = { version = "1.0", features = ["derive"] }
