[package]
name = "dirtywatts-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
reqwest = "0.11.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.75"
dotenv = "0.15.0"
diesel = { version = "2.1.1", features = ["numeric", "postgres", "chrono"] }
bigdecimal = { version = "0.4.1", features = ["serde"]}
diesel_migrations = "2.1.0"